log
Mon 20 Mar 2023 11:08:12 PM UTC: 
 tests:  0|6
total_score: 0/70
ea9d91d
Thu 23 Mar 2023 06:29:40 PM UTC: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
4eb0a0d
Thu 23 Mar 2023 06:30:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:15: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   43 |   return list -> next -> data;
      |               ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
acdfb23
Thu 23 Mar 2023 06:31:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
311a67d
Thu 23 Mar 2023 06:34:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ca238e6
Thu 23 Mar 2023 06:34:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2623b98
Thu 23 Mar 2023 06:35:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d631991
Thu 23 Mar 2023 06:35:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c30bf1c
Thu 23 Mar 2023 06:42:57 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c6b479c
Thu 23 Mar 2023 06:43:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e78cfe2
Thu 23 Mar 2023 06:43:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7601f3
Thu 23 Mar 2023 06:45:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f19eff3
Thu 23 Mar 2023 06:45:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d9c8127
Thu 23 Mar 2023 06:46:38 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
496e613
Thu 23 Mar 2023 06:46:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4ef4d61
Thu 23 Mar 2023 06:48:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
2d1ca40
Thu 23 Mar 2023 06:51:22 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
339b60f
Thu 23 Mar 2023 06:51:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
3ba86c7
Thu 23 Mar 2023 07:20:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c47f9af
Thu 23 Mar 2023 07:22:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
034019e
Thu 23 Mar 2023 07:26:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
65457e6
Fri 24 Mar 2023 12:29:45 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 10/70
9b5be0d
Fri 24 Mar 2023 12:30:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
c62f6cb
Fri 24 Mar 2023 11:17:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
091769f
Fri 24 Mar 2023 11:18:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60346b1
Fri 24 Mar 2023 11:18:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:15: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |   return list -> next -> data;
      |               ^~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4248832
Fri 24 Mar 2023 11:24:54 AM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:3: error: expected ‘,’ or ‘;’ before ‘list’
   67 |   list -> tail = nuevoNodo;
      |   ^~~~
list.c:65:9: error: unused variable ‘nuevoNode’ [-Werror=unused-variable]
   65 |   Node* nuevoNode = createNode(&data)
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ebffb12
Fri 24 Mar 2023 11:24:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:18: error: ‘nuevoNodo’ undeclared (first use in this function); did you mean ‘nuevoNode’?
   67 |   list -> tail = nuevoNodo;
      |                  ^~~~~~~~~
      |                  nuevoNode
list.c:67:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:65:9: error: unused variable ‘nuevoNode’ [-Werror=unused-variable]
   65 |   Node* nuevoNode = createNode(&data);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
829a4a0
Fri 24 Mar 2023 11:31:53 AM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
b658a8e
Fri 24 Mar 2023 11:32:08 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
9ece94d
Fri 24 Mar 2023 11:33:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
fee58cf
Fri 24 Mar 2023 11:36:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:61:15: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   61 |   return list -> prev -> data;
      |               ^~
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8913969
Fri 24 Mar 2023 11:36:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
2bba5fe
Fri 24 Mar 2023 11:39:07 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b49bca7
Fri 24 Mar 2023 11:39:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4d13041
Fri 24 Mar 2023 11:43:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ed3d24b
Fri 24 Mar 2023 11:45:03 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|4
total_score: 25/70
d1056cd
Fri 24 Mar 2023 11:47:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b3c4e9
Fri 24 Mar 2023 11:49:03 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
a85ef6c
Fri 24 Mar 2023 11:49:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ceda44
Fri 24 Mar 2023 11:50:13 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
8394741
Fri 24 Mar 2023 11:50:25 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
0774893
Fri 24 Mar 2023 11:55:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e209a5d
Fri 24 Mar 2023 11:56:32 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
0fa1aee
Fri 24 Mar 2023 11:58:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
c391f72
Fri 24 Mar 2023 12:06:58 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 35/70
176f2af
Fri 24 Mar 2023 12:07:36 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|3
total_score: 35/70
5065e5f
Fri 24 Mar 2023 12:08:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 35/70
ef0b06d
Fri 24 Mar 2023 12:09:16 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
dda6a36
Fri 24 Mar 2023 12:30:30 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:112:1: error: expected expression before ‘}’ token
  112 | }
      | ^
Compilation failed
9ac2b04
